--- a/.dev/sass/compat/woocommerce.scss
+++ b/.dev/sass/compat/woocommerce.scss
@@ -1,123 +1,158 @@
-ul.products a.button:after,
-.menu-item-object-cart p.buttons a:after {
-	display: none;
-}
+.primer-wc-cart-menu {
 
-.main-navigation .menu-item-object-cart:hover a {
-	background: transparent;
-}
-
-ul.site-header-cart.menu {
-	width: 100%;
-	max-width: 275px;
-	padding: 0;
-	list-style: none;
-	float: right;
-	display: none;
-	position: relative;
-	z-index: 10001;
-	background-color: $header-bg-color;
-}
-
-.site-footer-inner .woocommerce-cart-menu-item,
-.site-info-wrapper .woocommerce-cart-menu-item {
-	display: none;
-}
-
-.widget_shopping_cart {
-
-	float: left;
-	padding: 0 1rem 1rem 1rem;
-
-	ul.product_list_widget {
-		position: relative !important;
-		left: 0;
-		max-height: 250px;
-		overflow-y: auto;
-	}
-
-	p.buttons,
-	.total,
-	.product_list_widget {
-		float: left;
+	.primer-wc-cart-sub-menu {
+		float: right;
 		width: 100%;
-	}
+		box-shadow: none;
 
-	p.buttons {
-		margin-bottom: 0;
-	}
+		li,
+		.widget_shopping_cart {
+			width: 100%;
+			background: #fff;
+		}
 
-}
+		.widget_shopping_cart {
 
-.woocommerce.widget_shopping_cart .cart_list li.mini_cart_item {
-	padding: 0;
-	margin: 0;
-	width: 100%;
-	opacity: 1;
-	transition: opacity .25s ease-out;
-	-moz-transition: opacity .25s ease-out;
-	-webkit-transition: opacity .25s ease-out;
-	-o-transition: opacity .25s ease-out;
+			float: right;
+			width: 250px;
+			box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
 
-	a:nth-child(2) {
-		margin: 0;
-		width: 100%;
-		border: none;
-		text-indent: 3px;
-		padding-bottom: 0;
-	}
+			.quantity {
+				display: block;
+				float: left;
+				font-style: italic;
+			}
 
-	img {
-		width: 100%;
-		max-width: 55px;
+			ul.product_list_widget {
+				position: relative !important;
+				left: 0;
+				max-height: 250px;
+				overflow-y: auto;
+			}
+
+			p.buttons,
+			.total,
+			.product_list_widget {
+				float: left;
+				width: 100%;
+			}
+
+			.total strong {
+				text-index: 0;
+			}
+
+			p.buttons {
+				padding: .5em;
+				margin: 0;
+			}
+
+			.cart_list li.mini_cart_item {
+				padding: 0 !important;
+				margin: 0;
+				width: 100%;
+				padding-bottom: 5px;
+				border-bottom: none;
+				padding: .5em 1em;
+				text-indent: 0;
+				opacity: 1;
+				transition: opacity .25s ease-out;
+
+				img {
+					width: 100%;
+					max-width: 55px;
+				}
+
+				a {
+					border-bottom: none;
+				}
+
+				a:nth-child(2) {
+					padding: .5em;
+					padding-bottom :0;
+					margin: 0;
+					width: 100%;
+					text-indent: 0 !important;
+				}
+
+				&:hover {
+					opacity: .85;
+				}
+			}
+
+		}
+
+		.primer-wc-cart-sub-menu-item {
+
+			.product_list_widget {
+				border: none;
+				box-shadow: none;
+				display: inline-block;
+				left: 0 !important;
+				background: inherit;
+			}
+
+			.widget_shopping_cart {
+
+				padding: 0;
+				margin-bottom: 0;
+
+				.total {
+					margin: 0 0 10px 0;
+					padding-top: 10px;
+					text-align: center;
+				}
+
+				.total strong {
+					text-indent: 0;
+				}
+
+				p.buttons a {
+					text-align: center;
+					width: 100%;
+					text-indent: 0;
+
+					&:first-child {
+						margin-bottom: 5px;
+					}
+
+				}
+
+			}
+
+			.cart-preview-count {
+				margin-left: 8px;
+			}
+
+			.cart_list li a.remove {
+				position: relative !important;
+				float: left;
+				padding: 0;
+				margin-top: 10px;
+				margin-left: 15px;
+				text-indent: 0;
+				margin-right: 5px;
+				z-index: 1001;
+				line-height: .95;
+				text-indent: 0 !important;
+				border: none;
+				box-shadow: none;
+
+				&:hover {
+					background: red !important;
+				}
+			}
+
+		}
+
 	}
 
 	&:hover {
-		opacity: 0.85;
-	}
+		cursor: pointer;
 
-	.quantity {
-		padding-left: 5px;
-	}
-
-}
-
-.woocommerce-cart-menu-item {
-
-	.product_list_widget {
-		border: none;
-		box-shadow: none;
-	}
-
-	.widget_shopping_cart {
-
-		.total {
-			margin: 10px 0;
-			padding-top: 10px;
+		a {
+			background: transparent;
 		}
 
-		p.buttons a {
-			text-align: center;
-			width: 100%;
-			margin-bottom: 5px;
-		}
-
-	}
-
-	.cart-preview-count {
-		margin-left: 8px;
-	}
-
-	.cart_list li a.remove {
-		position: relative !important;
-		float: left;
-		padding: 0;
-		margin-top: 15px;
-		text-indent: 0;
-
-		&:hover {
-			background: red;
-		}
 	}
 
 }
@@ -146,43 +181,49 @@ body.single-product {
 		left: 0;
 	}
 
-}
-
-@media #{$medium-up} {
-
-	li#woocommerce-cart-menu-item .sub-menu {
-		margin-left: -6em;
+	.quantity .input-text {
+		padding: 8px;
 	}
 
+}
+
+body.woocommerce-cart {
+
+	.primer-wc-cart-sub-menu {
+		display: none;
+	}
+}
+
+.woocommerce #content table.cart img,
+.woocommerce table.cart img,
+.woocommerce-page #content table.cart img,
+.woocommerce-page table.cart img {
+	width: 100%;
+	max-width: 100px;
+	margin-bottom: 0;
+}
+
+.woocommerce #content table.cart td.actions .input-text,
+.woocommerce table.cart td.actions .input-text,
+.woocommerce-page #content table.cart td.actions .input-text,
+.woocommerce-page table.cart td.actions .input-text {
+	padding: 7px;
+}
+
+.woocommerce ul.products li.product a.add_to_cart_button {
+	width: 100%;
+	font-size: 16px;
+	text-align: center;
 }
 
 @media #{$small-only} {
 
-	.woocommerce-cart-menu-item.open ul.product_list_widget {
-		display: inline-block;
-	}
+	.primer-wc-cart-menu {
 
-	li#woocommerce-cart-menu-item .widget_shopping_cart {
-		width: 100%;
-	}
+		.primer-wc-cart-sub-menu {
 
-	.woocommerce-cart-menu-item.open {
-		display: inline-block;
-		width: 100%;
-
-		p.buttons a {
-			display: block;
-		}
-
-		.total {
-			text-align: center;
-		}
-
-		.widget_shopping_cart {
-			padding: 0;
-
-			.cart_list li {
-				padding: 0 1em;
+			.widget_shopping_cart {
+				width: 100%;
 			}
 
 		}
