--- a/style.css
+++ b/style.css
@@ -4208,92 +4208,108 @@ html {
 #wpstats {
   display: none; }
 
-ul.products a.button:after,
-.menu-item-object-cart p.buttons a:after {
-  display: none; }
-
-.main-navigation .menu-item-object-cart:hover a {
-  background: transparent; }
-
-ul.site-header-cart.menu {
-  width: 100%;
-  max-width: 275px;
-  padding: 0;
-  list-style: none;
+.primer-wc-cart-menu .primer-wc-cart-sub-menu {
   float: right;
-  display: none;
-  position: relative;
-  z-index: 10001;
-  background-color: white; }
-
-.site-footer-inner .woocommerce-cart-menu-item,
-.site-info-wrapper .woocommerce-cart-menu-item {
-  display: none; }
-
-.widget_shopping_cart {
-  float: left;
-  padding: 0 1rem 1rem 1rem; }
-  .widget_shopping_cart ul.product_list_widget {
-    position: relative !important;
-    left: 0;
-    max-height: 250px;
-    overflow-y: auto; }
-  .widget_shopping_cart p.buttons,
-  .widget_shopping_cart .total,
-  .widget_shopping_cart .product_list_widget {
-    float: left;
-    width: 100%; }
-  .widget_shopping_cart p.buttons {
-    margin-bottom: 0; }
-
-.woocommerce.widget_shopping_cart .cart_list li.mini_cart_item {
-  padding: 0;
-  margin: 0;
   width: 100%;
-  opacity: 1;
-  transition: opacity .25s ease-out;
-  -moz-transition: opacity .25s ease-out;
-  -webkit-transition: opacity .25s ease-out;
-  -o-transition: opacity .25s ease-out; }
-  .woocommerce.widget_shopping_cart .cart_list li.mini_cart_item a:nth-child(2) {
-    margin: 0;
-    width: 100%;
-    border: none;
-    text-indent: 3px;
-    padding-bottom: 0; }
-  .woocommerce.widget_shopping_cart .cart_list li.mini_cart_item img {
-    width: 100%;
-    max-width: 55px; }
-  .woocommerce.widget_shopping_cart .cart_list li.mini_cart_item:hover {
-    opacity: 0.85; }
-  .woocommerce.widget_shopping_cart .cart_list li.mini_cart_item .quantity {
-    padding-left: 5px; }
-
-.woocommerce-cart-menu-item .product_list_widget {
-  border: none;
   -webkit-box-shadow: none;
   box-shadow: none; }
+  .primer-wc-cart-menu .primer-wc-cart-sub-menu li,
+  .primer-wc-cart-menu .primer-wc-cart-sub-menu .widget_shopping_cart {
+    width: 100%;
+    background: #fff; }
+  .primer-wc-cart-menu .primer-wc-cart-sub-menu .widget_shopping_cart {
+    float: right;
+    width: 250px;
+    -webkit-box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2); }
+    .primer-wc-cart-menu .primer-wc-cart-sub-menu .widget_shopping_cart .quantity {
+      display: block;
+      float: left;
+      font-style: italic; }
+    .primer-wc-cart-menu .primer-wc-cart-sub-menu .widget_shopping_cart ul.product_list_widget {
+      position: relative !important;
+      left: 0;
+      max-height: 250px;
+      overflow-y: auto; }
+    .primer-wc-cart-menu .primer-wc-cart-sub-menu .widget_shopping_cart p.buttons,
+    .primer-wc-cart-menu .primer-wc-cart-sub-menu .widget_shopping_cart .total,
+    .primer-wc-cart-menu .primer-wc-cart-sub-menu .widget_shopping_cart .product_list_widget {
+      float: left;
+      width: 100%; }
+    .primer-wc-cart-menu .primer-wc-cart-sub-menu .widget_shopping_cart .total strong {
+      text-index: 0; }
+    .primer-wc-cart-menu .primer-wc-cart-sub-menu .widget_shopping_cart p.buttons {
+      padding: .5em;
+      margin: 0; }
+    .primer-wc-cart-menu .primer-wc-cart-sub-menu .widget_shopping_cart .cart_list li.mini_cart_item {
+      padding: 0 !important;
+      margin: 0;
+      width: 100%;
+      padding-bottom: 5px;
+      border-bottom: none;
+      padding: .5em 1em;
+      text-indent: 0;
+      opacity: 1;
+      -webkit-transition: opacity .25s ease-out;
+      transition: opacity .25s ease-out; }
+      .primer-wc-cart-menu .primer-wc-cart-sub-menu .widget_shopping_cart .cart_list li.mini_cart_item img {
+        width: 100%;
+        max-width: 55px; }
+      .primer-wc-cart-menu .primer-wc-cart-sub-menu .widget_shopping_cart .cart_list li.mini_cart_item a {
+        border-bottom: none; }
+      .primer-wc-cart-menu .primer-wc-cart-sub-menu .widget_shopping_cart .cart_list li.mini_cart_item a:nth-child(2) {
+        padding: .5em;
+        padding-bottom: 0;
+        margin: 0;
+        width: 100%;
+        text-indent: 0 !important; }
+      .primer-wc-cart-menu .primer-wc-cart-sub-menu .widget_shopping_cart .cart_list li.mini_cart_item:hover {
+        opacity: .85; }
+  .primer-wc-cart-menu .primer-wc-cart-sub-menu .primer-wc-cart-sub-menu-item .product_list_widget {
+    border: none;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+    display: inline-block;
+    left: 0 !important;
+    background: inherit; }
+  .primer-wc-cart-menu .primer-wc-cart-sub-menu .primer-wc-cart-sub-menu-item .widget_shopping_cart {
+    padding: 0;
+    margin-bottom: 0; }
+    .primer-wc-cart-menu .primer-wc-cart-sub-menu .primer-wc-cart-sub-menu-item .widget_shopping_cart .total {
+      margin: 0 0 10px 0;
+      padding-top: 10px;
+      text-align: center; }
+    .primer-wc-cart-menu .primer-wc-cart-sub-menu .primer-wc-cart-sub-menu-item .widget_shopping_cart .total strong {
+      text-indent: 0; }
+    .primer-wc-cart-menu .primer-wc-cart-sub-menu .primer-wc-cart-sub-menu-item .widget_shopping_cart p.buttons a {
+      text-align: center;
+      width: 100%;
+      text-indent: 0; }
+      .primer-wc-cart-menu .primer-wc-cart-sub-menu .primer-wc-cart-sub-menu-item .widget_shopping_cart p.buttons a:first-child {
+        margin-bottom: 5px; }
+  .primer-wc-cart-menu .primer-wc-cart-sub-menu .primer-wc-cart-sub-menu-item .cart-preview-count {
+    margin-left: 8px; }
+  .primer-wc-cart-menu .primer-wc-cart-sub-menu .primer-wc-cart-sub-menu-item .cart_list li a.remove {
+    position: relative !important;
+    float: left;
+    padding: 0;
+    margin-top: 10px;
+    margin-left: 15px;
+    text-indent: 0;
+    margin-right: 5px;
+    z-index: 1001;
+    line-height: .95;
+    text-indent: 0 !important;
+    border: none;
+    -webkit-box-shadow: none;
+    box-shadow: none; }
+    .primer-wc-cart-menu .primer-wc-cart-sub-menu .primer-wc-cart-sub-menu-item .cart_list li a.remove:hover {
+      background: red !important; }
 
-.woocommerce-cart-menu-item .widget_shopping_cart .total {
-  margin: 10px 0;
-  padding-top: 10px; }
-
-.woocommerce-cart-menu-item .widget_shopping_cart p.buttons a {
-  text-align: center;
-  width: 100%;
-  margin-bottom: 5px; }
-
-.woocommerce-cart-menu-item .cart-preview-count {
-  margin-left: 8px; }
-
-.woocommerce-cart-menu-item .cart_list li a.remove {
-  position: relative !important;
-  float: left;
-  padding: 0;
-  margin-top: 15px;
-  text-indent: 0; }
-  .woocommerce-cart-menu-item .cart_list li a.remove:hover {
-    background: red; }
+.primer-wc-cart-menu:hover {
+  cursor: pointer; }
+  .primer-wc-cart-menu:hover a {
+    background: transparent; }
 
 body.post-type-archive,
 body.single-product {
@@ -4315,23 +4331,31 @@ body.single-product span.onsale {
   top: 0;
   left: 0; }
 
-@media only screen and (min-width: 40.063em) {
-  li#woocommerce-cart-menu-item .sub-menu {
-    margin-left: -6em; } }
+body.single-product .quantity .input-text {
+  padding: 8px; }
+
+body.woocommerce-cart .primer-wc-cart-sub-menu {
+  display: none; }
+
+.woocommerce #content table.cart img,
+.woocommerce table.cart img,
+.woocommerce-page #content table.cart img,
+.woocommerce-page table.cart img {
+  width: 100%;
+  max-width: 100px;
+  margin-bottom: 0; }
+
+.woocommerce #content table.cart td.actions .input-text,
+.woocommerce table.cart td.actions .input-text,
+.woocommerce-page #content table.cart td.actions .input-text,
+.woocommerce-page table.cart td.actions .input-text {
+  padding: 7px; }
+
+.woocommerce ul.products li.product a.add_to_cart_button {
+  width: 100%;
+  font-size: 16px;
+  text-align: center; }
 
 @media only screen and (max-width: 40em) {
-  .woocommerce-cart-menu-item.open ul.product_list_widget {
-    display: inline-block; }
-  li#woocommerce-cart-menu-item .widget_shopping_cart {
-    width: 100%; }
-  .woocommerce-cart-menu-item.open {
-    display: inline-block;
-    width: 100%; }
-    .woocommerce-cart-menu-item.open p.buttons a {
-      display: block; }
-    .woocommerce-cart-menu-item.open .total {
-      text-align: center; }
-    .woocommerce-cart-menu-item.open .widget_shopping_cart {
-      padding: 0; }
-      .woocommerce-cart-menu-item.open .widget_shopping_cart .cart_list li {
-        padding: 0 1em; } }
+  .primer-wc-cart-menu .primer-wc-cart-sub-menu .widget_shopping_cart {
+    width: 100%; } }
