--- a/.dev/sass/partials/_forms.scss
+++ b/.dev/sass/partials/_forms.scss
@@ -10,8 +10,8 @@ textarea {
 }
 
 button,
-a.button,
-a.button:visited,
+a.button:not(.wc-forward),
+a.button:visited:not(.wc-forward),
 input[type="button"],
 input[type="reset"],
 input[type="submit"] {
@@ -29,7 +29,7 @@ input[type="submit"] {
 	padding: .75rem 0;
 	display: inline-block;
 
-	&:after {
+	&:after:not(.customize-partial-edit-shortcut) {
 		content: '\f501';
 		font-family: 'Genericons';
 		display: inline;
@@ -44,18 +44,15 @@ input[type="submit"] {
 		}
 	}
 
-	&:hover {
-		background: transparent;
+	&:hover,
+	&:focus,
+	&:active {
+		background: transparent !important;
 	}
 
 	&:hover:after {
 		left: 8px;
 		transition: .2s all;
-	}
-
-	&:focus
-	&:active{
-		background: lighten($color-background-button,3%);
 	}
 }
 
