--- a/style.css
+++ b/style.css
@@ -3408,6 +3408,44 @@ body {
       background: #fff;
       z-index: 1;
       min-height: 86px; } }
+  .site-header.video-header + .hero {
+    height: -webkit-calc( 100vh - 95px);
+    height: calc( 100vh - 95px);
+    padding: 0;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -moz-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    position: relative; }
+    .site-header.video-header + .hero aside {
+      position: relative; }
+    .site-header.video-header + .hero .hero-inner {
+      z-index: 1; }
+    .site-header.video-header + .hero #wp-custom-header {
+      position: absolute;
+      height: 100%;
+      top: 0;
+      left: 0; }
+      .site-header.video-header + .hero #wp-custom-header img {
+        display: none; }
+    .site-header.video-header + .hero #wp-custom-header-video-button {
+      position: absolute;
+      bottom: 0.5em;
+      left: 1em;
+      opacity: 0.5;
+      z-index: 11; }
+    .site-header.video-header + .hero iframe#wp-custom-header-video {
+      height: 100%; }
+
+body.admin-bar .video-header + .hero {
+  height: -webkit-calc( 100vh - 94px - 32px);
+  height: calc( 100vh - 94px - 32px); }
 
 .featured-content .entry-header {
   -webkit-background-size: cover;
